--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.0.2",
+    "react-typed": "^2.0.12",
     "react-verification-input": "^4.2.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
