--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+VITE_RAZORPAY_KEY_ID='rzp_test_H5oslzePEwdsUP'
 VITE_BACKEND_API_URL='http://localhost:3000/api/v1'
 VITE_BACKEND_SOCKET_URL='http://localhost:3000'
