--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.62.7",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.468.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
