--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tabler/icons-react": "^3.29.0",
     "@tanstack/react-query": "^5.62.7",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
@@ -27,7 +29,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.0.11",
     "lucide-react": "^0.468.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
